# sims-clone

./: .gitignore  NEW_FEATURES.md  README.md  admin.html  dashboard.html  extract_data.py  index.html  package.json  run_headless.sh  vite.config.js
config/: gameConfig.json
docs/: ARCHITECTURE.md  AUTONOMOUS_SHOPPING.md  EVOLUTION_ROADMAP.md  FUNCTIONAL.md  NEW_MILESTONE.md  PERSISTENCE.md  PLATFORM_ROADMAP.md  RUST_BACKEND_ROADMAP.md  TECHNICAL.md  UI_RESKIN_PLAN.md  WELLBEING_AMBITION.md
scripts/: analyze_headless.py  headless.mjs  launch.mjs
src/: main.js  tauri-bootstrap.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ai/: Action.js  ActionQueue.js  ContextualNoise.js  CookMealAction.js  ExperientialBias.js  GoalSystem.js  MemorySystem.js  NeedDrivenPlanner.js  Pathfinder.js  PersonalityDrift.js  SimBrain.js  SkillAction.js  SocialAction.js  (+4 more)
tests/: BudgetListener.test.js  Careers.test.js  Construction.test.js  CraftCap.test.js  Doctor.test.js  EvilTrait.test.js  Family.test.js  Food.test.js  GoalSystem.test.js  HouseholdPlanner.test.js  IllnessRate.test.js  Kitchen.test.js  Location.test.js  MemorySystem.test.js  MemoryText.test.js  Mesh.test.js  Monogamy.test.js  MoodEngine.test.js  MoveIn.test.js  NameOf.test.js  NeedDecayDayLength.test.js  OffLotMeal.test.js  RoomFurnishing.test.js  SessionLogScoping.test.js  SimNeeds.test.js  SkillSystem.test.js  SocialDynamics.test.js  StarterHome.test.js  Starvation.test.js  StoryScoping.test.js  TeenWork.test.js  WallManager.test.js
(+119 files in other folders)
