[package]
name = "sims-clone"
version = "0.1.0"
description = "Sims Clone desktop shell"
authors = ["timetravel0"]
edition = "2021"

[lib]
name = "sims_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
